k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-homelab
  namespace: devops-homelab
spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-homelab

  template:
    metadata:
      labels:
        app: flask-homelab

    spec:
      containers:
      - name: flask-homelab

        image: localhost:5001/flask-homelab:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "200m"

        readinessProbe:
          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 15
          periodSeconds: 20
