k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-homelab-service
  namespace: devops-homelab

spec:
  selector:
    app: flask-homelab

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

  type: NodePort
